@@ -34,7 +34,8 @@ define( function( require ) {
     H3O_PARTICLES: new Color( 204, 0, 0 ),
     OH_PARTICLES: new Color( 0, 0, 255 ),
 
-    // pH display
-    PH_DISPLAY: new Color( 31, 113, 2 )
+    // pH meters
+    SOLUTIONS_PH_METER: new Color( 31, 113, 2 ),
+    CUSTOM_PH_METER: new Color( 31, 113, 2 )
   };
 } );
