@@ -1,9 +1,9 @@
-// Copyright 2002-2013, University of Colorado Boulder
+// Copyright 2002-2014, University of Colorado Boulder
 
+//TODO add spinners
 /**
  * Displays pH value inside of a rounded rectangle, which is then placed inside of yet-another rounded rectangle.
- * This is the thing that you see sliding up and down the pH Scale in 'Basics', and attached to the top of the
- * pH meter in 'Solutions'.
+ * Change the pH value using spinners.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -29,7 +29,7 @@ define( function( require ) {
    * @param {Property<Boolean>} enabledProperty optional
    * @constructor
    */
-  function PHValueNode( pHProperty, enabledProperty ) {
+  function CustomPHMeterNode( pHProperty, enabledProperty ) {
 
     var thisNode = this;
     Node.call( thisNode );
@@ -56,27 +56,18 @@ define( function( require ) {
     var backgroundWidth = Math.max( labelNode.width, valueRectangle.width ) + ( 2 * backgroundXMargin );
     var backgroundHeight = labelNode.height + valueRectangle.height + backgroundYSpacing + ( 2 * backgroundYMargin );
     var backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
-      { fill: PHScaleColors.SOLUTIONS_PH_METER } );
-
-    // highlight around the background
-    var highlightLineWidth = 3;
-    var outerHighlight = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
-      { stroke: 'black', lineWidth: highlightLineWidth } );
-    var innerHighlight = new Rectangle( highlightLineWidth, highlightLineWidth, backgroundWidth - ( 2 * highlightLineWidth ), backgroundHeight - ( 2 * highlightLineWidth ), cornerRadius, cornerRadius,
-      { stroke: 'white', lineWidth: highlightLineWidth } );
-    var highlight = new Node( { children: [ innerHighlight, outerHighlight ], visible: false } );
+      { fill: PHScaleColors.CUSTOM_PH_METER } );
 
     // rendering order
     thisNode.addChild( backgroundRectangle );
-    thisNode.addChild( highlight );
     thisNode.addChild( valueRectangle );
     thisNode.addChild( labelNode );
     thisNode.addChild( valueNode );
 
     // layout
-    labelNode.centerX = backgroundRectangle.centerX;
     labelNode.top = backgroundRectangle.top + backgroundYMargin;
     valueRectangle.centerX = backgroundRectangle.centerX;
+    labelNode.left = valueRectangle.left;
     valueRectangle.top = labelNode.bottom + backgroundYSpacing;
     valueNode.right = valueRectangle.right - valueXMargin; // right justified
     valueNode.centerY = valueRectangle.centerY;
@@ -86,21 +77,19 @@ define( function( require ) {
       if ( pH === null ) {
         valueNode.text = stringNoValue;
         valueNode.centerX = valueRectangle.centerX; // center justified
-        highlight.visible = false;
       }
       else {
         valueNode.text = Util.toFixed( pH, PHScaleConstants.PH_METER_DECIMAL_PLACES );
         valueNode.right = valueRectangle.right - valueXMargin; // right justified
-        highlight.visible = ( parseFloat( valueNode.text ) === 7 );
       }
     } );
 
     if ( enabledProperty ) {
       enabledProperty.link( function( enabled ) {
-        backgroundRectangle.fill = enabled ? PHScaleColors.SOLUTIONS_PH_METER : 'rgb(178,178,178)';
+        backgroundRectangle.fill = enabled ? PHScaleColors.CUSTOM_PH_METER : 'rgb(178,178,178)';
       } );
     }
   }
 
-  return inherit( Node, PHValueNode );
+  return inherit( Node, CustomPHMeterNode );
 } );
